# pervius

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs
.github/workflows/: release.yml
classforge/: build.gradle  settings.gradle
classforge/src/main/java/pervius/asm/: BytecodeAssembler.java  ClassForge.java  JarClassWriter.java
classforge/src/main/java/pervius/compile/: KotlincCompiler.java  SourceCompiler.java
crates/egui-animation/: Cargo.toml  README.md
crates/egui-animation/src/: lib.rs
crates/egui-dock-patch/: .cargo_vcs_info.json  Cargo.toml
crates/egui-dock-patch/src/dock_state/tree/: mod.rs
crates/egui-dock-patch/src/dock_state/tree/node/: leaf.rs
crates/egui-dock-patch/src/widgets/: tab_viewer.rs
crates/egui-dock-patch/src/widgets/dock_area/show/: leaf.rs
crates/egui-editor/: Cargo.toml  README.md
crates/egui-editor/src/: code_view.rs  find_bar.rs  highlight.rs  lib.rs  search.rs  theme.rs  viewport.rs
crates/egui-editor/src/code_view/: frame.rs  gutter.rs  layout.rs  navigation.rs  scroll.rs  text_edit.rs
crates/egui-editor/src/highlight/: bytecode.rs  html.rs  java.rs  json.rs  kotlin.rs  macros.rs  yaml.rs
crates/egui-hex-view/: Cargo.toml  README.md
crates/egui-hex-view/src/: input.rs  inspector.rs  layout.rs  lib.rs  paint.rs
crates/egui-keybind/: Cargo.toml  README.md
crates/egui-keybind/src/: lib.rs
crates/egui-notify/: Cargo.toml
crates/egui-notify/src/: lib.rs
crates/egui-patch/src/: context.rs  painter.rs
crates/egui-patch/src/text_selection/: text_cursor_state.rs  visuals.rs
crates/egui-patch/src/widgets/text_edit/: builder.rs  state.rs
crates/egui-shell/: Cargo.toml  README.md
crates/egui-shell/src/: app.rs  codicon.rs  components.rs  fonts.rs  lib.rs  platform.rs  titlebar.rs
crates/egui-shell/src/components/: confirm.rs  flat_button.rs  menu.rs  overlay.rs  panel.rs  settings.rs  status_bar.rs  widget.rs  window.rs
crates/egui-shell/src/components/overlay/: confirm.rs  window.rs
crates/egui-shell/src/components/overlay/window/: header.rs
crates/egui-shell/src/components/panel/: menu.rs  settings.rs  status_bar.rs
crates/egui-shell/src/components/panel/settings/: panel.rs  persist.rs
crates/egui-shell/src/components/settings/: panel.rs  widget.rs
crates/egui-shell/src/components/widget/: flat_button.rs  island.rs
crates/egui-shell/src/components/window/: header.rs  resize.rs
crates/egui-window/: Cargo.toml
crates/egui-window-settings/: Cargo.toml
crates/egui-window-settings/src/: lib.rs  panel.rs  widget.rs
crates/egui-window/src/: lib.rs  window.rs
crates/egui-window/src/window/: header.rs  resize.rs
crates/pervius-java-bridge/: Cargo.toml  README.md
crates/pervius-java-bridge/src/: assembler.rs  bytecode.rs  class_structure.rs  classforge.rs  compiler.rs  decompiler.rs  deps.rs  environment.rs  error.rs  jar.rs  lib.rs  macros.rs  process.rs  save.rs
crates/pervius-java-bridge/src/bytecode/: annotation.rs  class.rs  common.rs  descriptor.rs  field.rs  format.rs  method.rs
crates/tabookit/: Cargo.toml
crates/tabookit/src/: macros.rs
crates/tabookit/tests/: class_macro.rs
locales/: en.yml  zh.yml
src/: app.rs  appearance.rs  decompiler.rs  highlight.rs  jar.rs  java.rs  main.rs  settings.rs  shell.rs  task.rs  ui.rs
src/app/: compile.rs  confirm.rs  decompile.rs  export.rs  handler.rs  navigate.rs  open.rs  platform.rs  search.rs  tab.rs  workspace.rs
src/appearance/: codicon.rs  theme.rs
src/java/: assembler.rs  bytecode.rs  class_structure.rs  classforge.rs  decompiler.rs  jar.rs  process.rs  save.rs
src/shell/: app.rs  codicon.rs  fonts.rs  platform.rs  theme.rs  titlebar.rs
src/ui/: confirm.rs  demo.rs  editor.rs  explorer.rs  keybindings.rs  layout.rs  menu.rs  mod.rs  search.rs  settings.rs  sidebar.rs  status_bar.rs  widget.rs
src/ui/editor/: area.rs  bytecode.rs  bytecode_panel.rs  dock_style.rs  find.rs  highlight.rs  mod.rs  render.rs  style.rs  tab.rs  view_toggle.rs  viewer.rs
src/ui/editor/bytecode/: detail.rs  nav.rs
src/ui/editor/highlight/: bytecode.rs  html.rs  java.rs  json.rs  mod.rs  properties.rs  sql.rs  xml.rs  yaml.rs
src/ui/editor/style/: dock.rs  hex.rs
src/ui/explorer/: filter.rs  mod.rs  search.rs  structure.rs  tree.rs
src/ui/explorer/tree/: build.rs  node.rs  render.rs
src/ui/layout/: confirm.rs  decompile.rs  export.rs  handler.rs  island.rs  platform.rs  tab.rs
src/ui/menu/: edit.rs  file.rs  help.rs  item.rs  view.rs
src/ui/search/: category.rs  demo.rs  index.rs  result.rs  tab.rs  widget.rs
src/ui/settings/: dialog.rs  widget.rs
src/ui/status_bar/: bar.rs  class_info.rs  decompile_progress.rs  download_progress.rs  export_progress.rs  index_progress.rs  item.rs  modified_count.rs  text_item.rs  view_toggle.rs
