[workspace]
members = [".", "crates/egui-animation", "crates/egui-hex-view", "crates/egui-keybind", "crates/egui-shell", "crates/egui-window", "crates/egui-window-settings"]

[package]
name = "pervius"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
eframe = { version = "0.34.1", default-features = false, features = ["glow", "default_fonts"] }
egui_dock = "0.19"
egui-notify = "0.22"
egui-animation = { path = "crates/egui-animation" }
egui-hex-view = { path = "crates/egui-hex-view" }
egui-keybind = { path = "crates/egui-keybind", features = ["serde"] }
egui-shell = { path = "crates/egui-shell" }
egui-window = { path = "crates/egui-window" }
egui-window-settings = { path = "crates/egui-window-settings" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = "2"
rfd = "0.15"
encoding_rs = "0.8"
chardetng = "0.1"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-sequel = "0.3"
tree-sitter-kotlin-sg = "0.4.0"
sha2 = "0.10"
dirs = "6"
ristretto_classfile = "0.30"
rust-i18n = "3"

[patch.crates-io]
egui_dock = { path = "crates/egui-dock-patch" }
