[workspace]
members = [".", "crates/egui-animation", "crates/egui-editor", "crates/egui-hex-view", "crates/egui-keybind", "crates/egui-notify", "crates/egui-shell", "crates/pervius-java-bridge"]

[package]
name = "pervius"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
eframe = { version = "0.34.1", default-features = false, features = ["glow", "default_fonts"] }
egui_dock = "0.19"
egui-notify = { path = "crates/egui-notify" }
egui-animation = { path = "crates/egui-animation" }
egui-editor = { path = "crates/egui-editor" }
egui-hex-view = { path = "crates/egui-hex-view" }
egui-keybind = { path = "crates/egui-keybind", features = ["serde"] }
egui-shell = { path = "crates/egui-shell" }
pervius-java-bridge = { path = "crates/pervius-java-bridge" }
serde = { version = "1", features = ["derive"] }
toml = "1"
zip = "2"
rfd = "0.15"
encoding_rs = "0.8"
chardetng = "1"
sha2 = "0.11"
dirs = "6"
ristretto_classfile = "0.30"
indexmap = "2"
rust-i18n = "3"

[build-dependencies]
winresource = "0.1"

[patch.crates-io]
egui_dock = { path = "crates/egui-dock-patch" }
