[package]
name = "egui-shell"
version = "0.1.0"
edition = "2024"
description = "Custom-titlebar window shell for eframe (decorations=false)"
license = "MIT"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow"] }
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.47"
egui-animation = { path = "../egui-animation" }
egui-keybind = { path = "../egui-keybind" }
tabookit = { path = "../tabookit" }
serde = "1"
toml = "0.8"
dirs = "6"
log = "0.4"
